# scim2-server

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: release.yml  tests.yaml
scim2_server/: backend.py  cli.py  filter.py  operators.py  provider.py  utils.py
tests/: conftest.py  test_backend.py  test_operators.py  test_patch.py  test_utils.py  utils.py
tests/integration/: test_basic.py  test_ms_entra.py  test_okta.py  test_scim_provider.py
